--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "react-dom": "^16.10.2",
         "react-scripts": "3.2.0",
         "react-spring": "^8.0.27",
-        "uuid": "^3.3.3"
+        "uuid": "^3.3.3",
+        "values.js": "^1.0.3"
     },
     "scripts": {
         "start": "react-scripts start",
