--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "framer-motion": "^1.6.14",
         "react": "^16.10.2",
         "react-dom": "^16.10.2",
         "react-scripts": "3.2.0",
-        "react-spring": "^8.0.27",
         "uuid": "^3.3.3",
         "values.js": "^1.0.3"
     },
